k8s/app-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: elsahilft-digital-production
  annotations:
    keel.sh/policy: 'glob:*'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend
      imagePullSecrets:
        - name: github-pull-token
      containers:
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=elsa-hilft-digital:europe-west6:elsa-hilft-prod-db=tcp:5432"]
          securityContext:
            runAsUser: 2  # non-root user
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
        - name: backend
          image: 'docker.pkg.github.com/elsahilftdigital/main/backend:c1535fd'
          ports:
            - containerPort: 4000
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            limits:
              memory: 2Gi
            requests:
              cpu: 200m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: elsahilft-digital-production
  labels:
    name: backend-service
spec:
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
  selector:
    app: backend
  type: ClusterIP
