k8s/app-staging.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: elsahilft-digital-staging
  labels:
    name: backend-service
spec:
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
  selector:
    app: backend
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    keel.sh/policy: glob:*
  labels:
    app: backend
  name: backend
  namespace: elsahilft-digital-staging
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: backend
  strategy:
    rollingUpdate:
      maxSurge: 0%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - command:
        - /cloud_sql_proxy
        - -instances=elsa-hilft-digital:europe-west6:elsa-hilft-prod-db=tcp:5432
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        imagePullPolicy: IfNotPresent
        name: cloudsql-proxy
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 2
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - env:
        - name: METRICS_SECRET
          valueFrom:
            secretKeyRef:
              key: secret
              name: metrics
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              key: secret
              name: jwt
        - name: TELEGRAM_TOKEN
          valueFrom:
            secretKeyRef:
              key: token
              name: telegram
        - name: TELEGRAM_BOT_NAME
          valueFrom:
            secretKeyRef:
              key: name
              name: telegram
        - name: TELEGRAM_GROUPCHAT_URL
          valueFrom:
            secretKeyRef:
              key: groupchaturl
              name: telegram
        - name: TELEGRAM_GROUPCHAT_ID
          valueFrom:
            secretKeyRef:
              key: groupchatid
              name: telegram
        - name: TELEGRAM_MODERATORCHAT_ID
          valueFrom:
            secretKeyRef:
              key: moderatorchatid
              name: telegram
        - name: TELEGRAM_SUPPORTUSER_NAME
          valueFrom:
            secretKeyRef:
              key: supportusername
              name: telegram
        - name: DEPLOYMENT_DOMAIN
          value: staging.elsa-hilft.ch
        - name: SMTP_HOST
          valueFrom:
            secretKeyRef:
              key: host
              name: mail
        - name: SMTP_PORT
          valueFrom:
            secretKeyRef:
              key: port
              name: mail
        - name: SMTP_USER
          valueFrom:
            secretKeyRef:
              key: user
              name: mail
        - name: SMTP_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: mail
        - name: DATABASE_URL
          valueFrom:
            secretKeyRef:
              key: url
              name: database
        - name: DATABASE_USER
          valueFrom:
            secretKeyRef:
              key: user
              name: database
        - name: DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: database
        - name: SPRING_PROFILES_ACTIVE
          value: production
        image: docker.pkg.github.com/elsahilftdigital/main/backend-staging:0db473c
        imagePullPolicy: IfNotPresent
        name: backend
        ports:
        - containerPort: 4000
          protocol: TCP
        resources:
          limits:
            memory: 2Gi
          requests:
            cpu: 200m
            memory: 1Gi
        securityContext:
          allowPrivilegeEscalation: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: github-pull-token
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: backend
      serviceAccountName: backend
      terminationGracePeriodSeconds: 30
