k8s/ing-static.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: google-storage-buckets
  namespace: elsahilft-digital-production
spec:
  type: ExternalName
  externalName: storage.googleapis.com
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-public-static
  namespace: elsahilft-digital-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # rewrite the path we send to gcs
    nginx.ingress.kubernetes.io/rewrite-target: /elsa-hilft-digital-production/public/$1
    nginx.ingress.kubernetes.io/upstream-vhost: "storage.googleapis.com"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - gcp.elsa-hilft.ch
    secretName: production-acme-tls
  rules:
  - host: gcp.elsa-hilft.ch
    http:
      paths:
      - path: /(.+)$
        backend:
          serviceName: google-storage-buckets
          servicePort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-admin-static
  namespace: elsahilft-digital-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # rewrite the path we send to gcs
    nginx.ingress.kubernetes.io/rewrite-target: /elsa-hilft-digital-production/admin/$1
    nginx.ingress.kubernetes.io/upstream-vhost: "storage.googleapis.com"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - gcp.elsa-hilft.ch
    secretName: production-acme-tls
  rules:
  - host: gcp.elsa-hilft.ch
    http:
      paths:
      - path: /admin/(.+)$
        backend:
          serviceName: google-storage-buckets
          servicePort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-admin-index-html-redirect
  namespace: elsahilft-digital-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # rewrite the path we send to gcs
    nginx.ingress.kubernetes.io/rewrite-target: /elsa-hilft-digital-production/admin/index.html
    nginx.ingress.kubernetes.io/upstream-vhost: "storage.googleapis.com"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - gcp.elsa-hilft.ch
    secretName: production-acme-tls
  rules:
  - host: gcp.elsa-hilft.ch
    http:
      paths:
      - path: /admin/$
        backend:
          serviceName: google-storage-buckets
          servicePort: 443
      - path: /admin$
        backend:
          serviceName: google-storage-buckets
          servicePort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-public-index-html-redirect
  namespace: elsahilft-digital-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # rewrite the path we send to gcs
    nginx.ingress.kubernetes.io/rewrite-target: /elsa-hilft-digital-production/public/index.html
    nginx.ingress.kubernetes.io/upstream-vhost: "storage.googleapis.com"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - gcp.elsa-hilft.ch
    secretName: production-acme-tls
  rules:
  - host: gcp.elsa-hilft.ch
    http:
      paths:
      - path: /$
        backend:
          serviceName: google-storage-buckets
          servicePort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend
  namespace: elsahilft-digital-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - gcp.elsa-hilft.ch
    secretName: production-acme-tls
  rules:
  - host: gcp.elsa-hilft.ch
    http:
      paths:
      - path: /api/.*$
        backend:
          serviceName: backend-service
          servicePort: 80
