k8s/ingress-app-production.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: google-storage-buckets
  namespace: elsahilft-digital-production
spec:
  type: ExternalName
  externalName: storage.googleapis.com
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-public-static
  namespace: elsahilft-digital-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # rewrite the path we send to gcs
    nginx.ingress.kubernetes.io/rewrite-target: /elsa-hilft.ch/$1
    nginx.ingress.kubernetes.io/upstream-vhost: "storage.googleapis.com"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - elsa-hilft.ch
    secretName: production-main-acme-tls
  rules:
  - host: elsa-hilft.ch
    http:
      paths:
      - path: /(.+)$
        backend:
          serviceName: google-storage-buckets
          servicePort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-public-static-redirect
  namespace: elsahilft-digital-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # rewrite the path we send to gcs
    nginx.ingress.kubernetes.io/rewrite-target: /elsa-hilft.ch/index.html
    nginx.ingress.kubernetes.io/upstream-vhost: "storage.googleapis.com"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - elsa-hilft.ch
    secretName: production-main-acme-tls
  rules:
  - host: elsa-hilft.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: google-storage-buckets
          servicePort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-admin-static
  namespace: elsahilft-digital-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # rewrite the path we send to gcs
    nginx.ingress.kubernetes.io/rewrite-target: /admin.elsa-hilft.ch/$1
    nginx.ingress.kubernetes.io/upstream-vhost: "storage.googleapis.com"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - admin.elsa-hilft.ch
    secretName: production-admin-acme-tls
  rules:
  - host: admin.elsa-hilft.ch
    http:
      paths:
      - path: /(.+)$
        backend:
          serviceName: google-storage-buckets
          servicePort: 443
      - path: /admin/(.+)$
        backend:
          serviceName: google-storage-buckets
          servicePort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-admin-static-redirect
  namespace: elsahilft-digital-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # rewrite the path we send to gcs
    nginx.ingress.kubernetes.io/rewrite-target: /admin.elsa-hilft.ch/index.html
    nginx.ingress.kubernetes.io/upstream-vhost: "storage.googleapis.com"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - admin.elsa-hilft.ch
    secretName: production-admin-acme-tls
  rules:
  - host: admin.elsa-hilft.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: google-storage-buckets
          servicePort: 443
      - path: /admin
        backend:
          serviceName: google-storage-buckets
          servicePort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend
  namespace: elsahilft-digital-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - elsa-hilft.ch
    - admin.elsa-hilft.ch
    secretName: production-acme-api-tls
  rules:
  - host: elsa-hilft.ch
    http:
      paths:
      - path: /api/.*$
        backend:
          serviceName: backend-service
          servicePort: 80
  - host: admin.elsa-hilft.ch
    http:
      paths:
      - path: /api/.*$
        backend:
          serviceName: backend-service
          servicePort: 80
