k8s/keel-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: keel-ingress
  namespace: keel
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: keel-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - keel'
spec:
  tls:
  - hosts:
    - gcp.elsa-hilft.ch
    secretName: keel-acme-tls
  rules:
  - host: gcp.elsa-hilft.ch
    http:
      paths:
      - path: /v1/webhooks/native
        backend:
          serviceName: keel
          servicePort: 9300
